# AI0x

./: .gitignore  AI0x.kdev4  CMakeLists.txt
cmake/Modules/: FindGLFW.cmake
data/: Level.xml  Objects.xml
doc/: AI.zargo
src/: NPuzzle.xml  Objects.xml  main.cpp
src/AI/Model/: Action.cpp  Action.h  Condition.cpp  Condition.h  State.cpp  State.h  World.cpp  World.h
src/AI/Search/: Node.cpp  Node.h  Problem.cpp  Problem.h  Service.cpp  Service.h
src/Bitflow/: AgentComponentDef.cpp  AgentComponentDef.h
src/Foundation/: CRC32.cpp  CRC32.h  Class.cpp  Class.h  Collection.cpp  Collection.h  Config.h  Field.cpp  Field.h  IObjectPool.h  IObjectPtr.h  IType.h  Name.cpp  Name.h  NameLiteral.cpp  NameLiteral.h  NameManager.cpp  NameManager.h  Object.cpp  Object.h  ObjectCompactPool.h  Pointer.cpp  Pointer.h  Pool.h  PoolManager.cpp  PoolManager.h  Singleton.h  Type.cpp  Type.h  TypeCast.cpp  TypeCast.h  TypeRegistry.cpp  TypeRegistry.h  Types.cpp  Types.h  Variable.cpp  Variable.h
src/GUI/: MainWindow.ui
src/Logger/: Logger.h
src/Logic/: Component.cpp  Component.h  ComponentDef.cpp  ComponentDef.h  Entity.cpp  Entity.h  EntityDef.cpp  EntityDef.h  EntityManager.cpp  EntityManager.h  World.cpp  World.h
src/NPuzzle/Model/: State.cpp  State.h  Types.h  World.cpp  World.h
src/NPuzzle/Model/Actions/: SlideEmptySpace.cpp  SlideEmptySpace.h
src/Render/: Service.cpp  Service.h
src/Serialization/: DataStream.h  DataStreamXML.cpp  DataStreamXML.h
